<resources>
    <string name="app_name">AVYAKT 2.0</string>
    <string name="close">Close</string>
    <string name="open">Open</string>

    <string name="sliderText">ACCESSIBLE EPISODE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image">profile_image</string>
    <string name="next_button">Next Button</string>
    <string name="github">Github</string>
    <string name="linkedin">Linkedin</string>
    <string name="instagram">Instagram</string>
    <string name="event_poster">Event Poster</string>
    <string name="phone_number">Phone Number :</string>
    <string name="event_coodinator">Event Coodinator :</string>
    <string name="register_now">Register Now</string>
    <string name="name">Name</string>
    <string name="add_form">Add Form </string>

    <string name="instruction_SOLO">
    ->  Leave Team Name as  IT IS  if going  || FOR SOLO ||.\n\n

    ->	Enter the Details of ONE member FIRST and click on verify.\n\n

    ->	Click on + button to add the details for another member.\n\n

    ->	Double CHECK The Details Before Clicking |VERIFY| Button.\n\n

    ->  AFTER ADDED, Click Submit Button.\n\n
</string>

    <string name="instruction_TEAM">

    ->	Enter the Details of ONE member FIRST and click on verify.\n\n

    ->	Click on + button to add the details for another member.\n\n

    ->	Double CHECK The Details Before Clicking |VERIFY| Button.\n\n

    ->  AFTER ADDED, Click Submit Button.\n\n
</string>
    <string name="instruction_SOLO_EVENT">
        ->	Enter the Details and Click Register.\n\n-> on successful registration, confirmation mail will sent to your mail.
    </string>



    <string name="instruction_team_game">
         ->	Entry Fee FOR SOLO:RS 20 \n\n
        ->	Entry Fee FOR TEAM:RS 100 \n\n

    </string>
    <string name="instruction_solo_game">
        ->	Entry Fee FOR TEAM:RS 100 \n\n

    </string>
    <string name="instruction_tshirt">
        For Payment\n
        Mobile no-9777527505\n
        Location -seminar hall (3rd floor ,CSE DEPARTMENT)\n
        Time- evening\n

    </string>

</resources>