<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="6dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/pawn"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedSqure"
            app:strokeColor="@color/purple"
            app:strokeWidth="5dp" />


        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="257dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="TextView" />

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage">

            <ImageButton
                android:id="@+id/githubImg"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/trans"
                android:clickable="true"
                android:contentDescription="@string/github"
                android:scaleType="fitCenter"
                android:src="@drawable/github" />

            <ImageButton
                android:id="@+id/instagramImg"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/trans"
                android:clickable="true"
                android:contentDescription="@string/instagram"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/insta" />

            <ImageButton
                android:id="@+id/linkedinImg"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/trans"
                android:clickable="true"
                android:contentDescription="@string/linkedin"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/inked" />
        </LinearLayout>

        <TextView
            android:id="@+id/NameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.852"
            app:layout_constraintStart_toEndOf="@+id/profileImage"
            app:layout_constraintTop_toBottomOf="@+id/descriptionText"
            app:layout_constraintVertical_bias="0.25"
            tools:text="TextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>