<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:elevation="20dp"
        android:background="@drawable/circular_curve"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/regImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:background="@drawable/regrecycleback"
                android:scaleType="fitXY"
                android:contentDescription="@string/event_poster"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:background= "@drawable/regrecycleback"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/ProgramName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    tools:text="Valorant"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/coordinatorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/event_coodinator"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ProgramName" />

                <TextView
                    android:id="@+id/coordinatorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="5dp"
                    tools:text="Sai Krishna"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/coordinatorText"


                    app:layout_constraintHorizontal_bias="0.18"
                    app:layout_constraintStart_toEndOf="@+id/coordinatorText" />

                <TextView
                    android:id="@+id/phoneText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/coordinatorText" />

                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="LAB2"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/phoneText"

                    app:layout_constraintHorizontal_bias="0.124"
                    app:layout_constraintStart_toEndOf="@+id/phoneText" />
                <FrameLayout
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/regrecyclebtn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/coordinatorName">
                <Button
                    android:id="@+id/btn_regForm"
                     style="@style/MyButton"
                    android:background="?attr/selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/register_now"
                    android:textColor="@color/white"
                    />
                </FrameLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>